--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ header{
             bottom: 0;
             left: 0;
             background-image: linear-gradient(
-                to top,#000 10%,rgba(0,0,0,0.5) 40%,transparent
+                to top,rgb(28, 28, 28)10%,rgba(28,28,28,0.5) 40%,transparent
             );
         }
 
@@ -256,6 +256,17 @@ header{
             
         }
     }
+    & .list::after{
+        content: '';
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(
+            to top,rgb(28, 28, 28)10%,rgba(28,28,28,0.5) 40%,transparent
+        );
+    }
 }
 
 @keyframes showHomePage {
@@ -295,6 +306,60 @@ header{
 #home .thumbnail .thumbnail-list .item.active{
     filter: brightness(1);
 }
+#contact{
+    width: 100%;
+    height: 600px;
+    background-color: white;
+
+    & .logo-slider{
+        width: 100%;
+        height: 200px;
+        background-color: #1c1c1c;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        & .scroll-wrap{
+            
+            -webkit-mask-image: linear-gradient(90deg,transparent 10%,#fff 30%,#fff 70%,transparent 90%);
+            overflow: hidden;
+            display: flex;
+
+            & .scroll{
+                width: 80%;
+                display: flex;
+                align-items: center;
+                gap: 9rem;
+                opacity: .5;
+    
+                & img{
+                    width: 100px;
+                    object-fit: contain;
+                }
+            }
+            & .scroll:nth-child(1){
+                transform: translateX(115%);
+                animation: logoScroll-1 40s linear infinite;
+            }
+            
+        }
+    }
+}
+
+@keyframes logoScroll-1 {
+    0%{
+        transform: translateX(115%);
+    }
+    100%{
+        transform: translateX(-115%);
+    }
+}
+
+svg{
+    width: 100%;
+}
+
+
 
 @media screen and (max-width: 800px) {
     header{
@@ -348,7 +413,7 @@ header{
             }
             & .item::after{
                 background-image: linear-gradient(
-                    to top,#000 20%,rgba(0,0,0,0.5) 60%,transparent
+                    to top,rgb(28, 28, 28)10%,rgba(28,28,28,0.5) 40%,transparent
                 );
             }
         }
