--- a/style.css
+++ b/style.css
@@ -306,6 +306,103 @@ header{
 #home .thumbnail .thumbnail-list .item.active{
     filter: brightness(1);
 }
+#services{
+    background-color: #ffffff;
+    width: 100%;
+    min-height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    & svg:first-child{
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+    }
+
+    & .container-services{
+        
+        margin-top: 200px;
+        height: 100%;
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 3rem;
+        
+
+        & .services-img{
+            padding: 3rem;
+            width: 100%;
+            & img{
+                width: 100%;
+                border-radius: 999px 999px 50px 50px;
+                object-fit: contain;
+                box-shadow: 16px 16px 20px rgba(28, 28, 28,0.5);
+            }
+        }
+        & .services-content{
+            margin-top: 5rem;
+            width: 100%;
+            padding: 3rem;
+            align-self: start;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            & p{
+                color: #3597c8;
+            }
+
+            & h2{
+                font-size: 1.5rem;
+                color: #074173;
+
+            }
+            & .services-box{
+                width: 100%;
+                border: 2px solid #8576FF;
+                border-radius: 10px;
+                transition: 1s;
+
+                
+                & .box-title{
+                    width: 100%;
+                    padding: 1rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    background-color: #ebf6ff;
+                    border-radius: 8px;
+                    color: #074173;
+                    cursor: pointer;
+
+                    & .icon{
+                        & span{
+                            margin-left: 1rem;
+                            font-weight: 500;
+                        }
+                    }
+                }
+                & .box-content{
+                    padding: 0 3rem;
+                    color: #3597c8;
+                    overflow: auto;
+                    height: 0;
+                    transition: all 1s;
+                }
+                & .box-content.active{
+                    padding: 1rem 3rem;
+                    height: 130px;
+                }
+            }
+        }
+    }
+    
+}
+
 #contact{
     width: 100%;
     height: 600px;
@@ -393,6 +490,17 @@ svg{
                     flex-shrink: 0;
                     width: 140px;
                 }
+            }
+        }
+    }
+    #services{
+        & .container-services{
+            flex-direction: column;
+            width: 100%;
+
+            & .services-content{
+                margin-top: 0;
+                min-height: 100vh;
             }
         }
     }
