--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ header{
             }
 
             & h2{
-                font-size: 1.5rem;
+                font-size: 2rem;
                 color: #074173;
 
             }
@@ -456,6 +456,152 @@ svg{
     width: 100%;
 }
 
+#package{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    & .container-package{
+        margin-top: 3rem;
+        width: 80%;
+
+        & .package-content{
+            display: flex;
+            width: 100%;
+            color: #074173;
+
+            & .package-title{
+                width: 50%;
+            }
+
+            & h2{
+                font-size: 2rem;
+                margin-bottom: 1rem;
+            }
+
+            & a{
+                border-bottom: 1.5px solid #074173;
+                padding-bottom: 0.3rem;
+                text-decoration: none;
+                transition: 1s;
+            }
+            & a:hover{
+                color: #3189d6;
+                border-bottom: 1.5px solid #3189d6;
+                letter-spacing: 2px;
+            }
+
+
+            & p{
+                width: 50%;
+                color: #3597c8;
+                padding: 1rem;
+            }
+        }
+
+        & .package-wrap{
+            margin-top: 2rem;
+            margin-bottom: 4rem;
+            display: flex;
+            width: 100%;
+            height: 380px;
+            gap: 1rem;
+
+            & img{
+                border-radius: 10px;
+                box-shadow: 5px 5px 10px rgba(28, 28, 28,0.5);
+                transition: 0.3s ease-in-out;
+                cursor: pointer;
+            }
+            & img:hover{
+                transform: scale(1.03);
+
+            }
+
+            & .package-box-1{
+                width: 50%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                
+                & img{
+                    width: 100%;
+                    height: calc(50% - 16px);
+                    object-fit: cover;
+                }
+                & .package-img{
+                    width: 100%;
+                    height: 50%;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    
+                    gap: 1rem;
+                    
+                    & img{
+                        height: 100%;
+                        width: 100%;
+                    }
+                   
+                }
+                
+            }
+
+            & .package-box-2{
+                width: 50%;
+                position: relative;
+                & img{
+                    width: 100%;
+                    object-fit: cover;
+                }
+
+                & .package-box-text{
+                    position: absolute;
+                    bottom: 20%;
+                    left: 10%;
+                    z-index: 3;
+                    color: #ffffff;
+                    width: 70%;
+
+                    & button{
+                        padding: 0.5rem 1rem;
+                        background-color: transparent;
+                        border: 1px solid #ffffff;
+                        color: #ffffff;
+                        margin-bottom: 1rem;
+                        border-radius: 5px;
+                        font-weight: 500;
+                        transition: 0.5s ease-in-out;
+                        cursor: pointer;
+                    }
+                    & button:hover{
+                        background-color: #ffffff;
+                        color: rgb(28, 28, 28);
+                    }
+                    & h2{
+                        margin-bottom: 1rem;
+                    }
+                    & p{
+                        font-weight: 200;
+                    }
+                }
+            }
+            & .package-box-2::after{
+                content: '';
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                border-radius: 10px;
+                background-image: linear-gradient(
+                    to top,rgba(28,28,28,0.8) 20%,transparent
+                );
+            }
+        }
+    }
+}
+
 
 
 @media screen and (max-width: 800px) {
@@ -504,7 +650,36 @@ svg{
             }
         }
     }
+
+    #package{
+        & .container-package{
+            margin-top: 0;
+            & .package-content{
+                flex-direction: column;
+                & .package-title{
+                    width: 100%;
+                }
+                & p{
+                    margin-top: 2rem;
+                    padding: 0;
+                    width: 100%;
+                }
+            }
+            & .package-wrap{
+                flex-direction: column;
+                height: auto;
+
+                & .package-box-1{
+                    width: 100%;
+                }
+                & .package-box-2{
+                    width: 100%;
+                }
+            }
+        }
+    } 
 }
+
 
 @media screen and (max-width : 480px) {
     #home{
@@ -530,4 +705,21 @@ svg{
         }
         
     }
+    #package{
+        & .container-package{
+
+            & .package-wrap{
+
+                & .package-box-2{
+                    width: 100%;
+                    & .package-box-text{
+                        bottom: 5%;
+                    }
+                    & p{
+                        display: none;
+                    }
+                }
+            }
+        }
+    } 
 }
