--- a/style.css
+++ b/style.css
@@ -602,6 +602,181 @@ svg{
     }
 }
 
+#blog{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+
+& .container-blog{
+    width: 80%;
+    height: 100%;
+    position: relative;
+
+    & h2{
+        font-size: 2rem;
+        color: #074173;
+        margin-bottom: 2rem;
+    }
+    & p{
+        color: #3597c8;
+        margin-bottom: 5rem;
+    }
+
+    & .blog-carousel{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        
+
+        & .blog-item{
+            width: 26%;
+            position: absolute;
+            transition: 0.5s ease-in-out;
+
+            & img{
+                width: 100%;
+                height: 155px;
+                border-radius: 10px;
+                object-fit: cover;
+            }
+
+            & .blog-content{
+                padding: 1.5rem;
+                position: relative;
+                
+
+                & h3{
+                    color: #074173;
+                    font-size: 1.2rem;
+                    margin-bottom: 1rem;
+                }
+                & p{
+                    color: #3597c8;
+                    font-size: 0.9rem;
+                    font-weight: 300;
+                    margin-bottom: 1rem;
+
+                }
+                & a{
+                    border-bottom: 1.5px solid #074173;
+                    padding-bottom: 0.3rem;
+                    text-decoration: none;
+                    transition: 1s;
+                }
+                & a:hover{
+                    color: #3189d6;
+                    border-bottom: 1.5px solid #3189d6;
+                    letter-spacing: 2px;
+                }
+                & .blog-date{
+                    width: 50px;
+                    height: 50px;
+                    background-color: #F3CA52;
+                    position: absolute;
+                    top: -70px;
+                    left: -10px;
+                    text-align: center;
+                    font-size: 1rem;
+                    font-weight: 700;
+                    color: #ffffff;
+                    & div{
+                        margin-top: 0.2rem;
+                    }
+                    
+                    & p{
+                        color: #ffffff;
+                        font-size: 0.8rem;
+                        font-weight: 300; 
+                    }
+                }
+            }
+            & .blog-content::after{
+                content: "";
+                width: 100%;
+                height: 60%;
+                position: absolute;
+                bottom: 20%;
+                left: 0;
+                border-left: 2px solid #F3CA52;
+            }
+        }
+        & .blog-item:nth-child(1){
+            transform: translateX(calc(-300% - 108px));
+            opacity: 0;
+        }
+        & .blog-item:nth-child(2){
+            transform: translateX(calc(-200% - 72px));
+            opacity: 0;
+        }
+        & .blog-item:nth-child(3){
+            transform: translateX(calc(-100% - 36px));
+        }
+        & .blog-item:nth-child(4){
+            transform: translateX(0);
+        }
+
+        & .blog-item:nth-child(5){
+            transform: translateX(calc(100% + 36px));
+        }
+        & .blog-item:nth-child(6){
+            transform: translateX(calc(200% + 72px));
+            opacity: 0;
+        }
+        & .blog-item:nth-child(n+7){
+            transform: translateX(calc(300% + 108px));
+            opacity: 0;
+        }
+    
+        
+    }
+    & .blog-btn{
+        width: 100%;
+        position: absolute;
+        top: 50%;
+        display: flex;
+        justify-content: space-between;
+        & button{
+            font-size: 2rem;
+            background-color: transparent;
+            border: none;
+            outline: none;
+            transition: 0.5s;
+            cursor: pointer;
+            color: #a4a4a4;
+        }
+        & button:hover{
+            color: #074173;
+
+        }
+        
+        
+    }
+    & .bullet{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        
+        & ul{
+            display: flex;
+            justify-content: space-around;
+            width: 30%;
+            & .bullet-item{
+                list-style: none;
+                width: 10px;
+                height: 10px;
+                border-radius: 100%;
+                background-color: #074173;
+
+            }
+        }
+    }
+}
+    
+}
+
 
 
 @media screen and (max-width: 800px) {
@@ -678,7 +853,48 @@ svg{
             }
         }
     } 
+
+    #blog{
+        & .container-blog{
+            & .blog-carousel{
+                & .blog-item{
+                    width: 40%;
+                }
+                & .blog-item:nth-child(1){
+                    transform: translateX(-180%);
+                    opacity: 0;
+                }
+                & .blog-item:nth-child(2){
+                    transform: translateX(-120%);
+                    opacity: 0;
+                }
+                & .blog-item:nth-child(3){
+                    transform: translateX(-60%);
+                }
+                & .blog-item:nth-child(4){
+                    transform: translateX(60%);
+                }
+        
+                & .blog-item:nth-child(5){
+                    transform: translateX(120%);
+                    opacity: 0;
+
+                }
+                & .blog-item:nth-child(6){
+                    transform: translateX(180%);
+                    opacity: 0;
+                }
+                & .blog-item:nth-child(n+7){
+                    transform: translateX(240%);
+                    opacity: 0;
+                }
+            }
+        }
+    }
 }
+
+
+  
 
 
 @media screen and (max-width : 480px) {
@@ -722,4 +938,44 @@ svg{
             }
         }
     } 
+
+    #blog{
+        & .container-blog{
+            & .blog-carousel{
+                & .blog-item{
+                    width: 80%;
+                }
+                & .blog-item:nth-child(1){
+                    transform: translateX(-120%);
+                    opacity: 0;
+                }
+                & .blog-item:nth-child(2){
+                    transform: translateX(-60%);
+                    opacity: 0;
+                }
+                & .blog-item:nth-child(3){
+                    transform: translateX(0);
+                }
+                & .blog-item:nth-child(4){
+                    transform: translateX(60%);
+                    opacity: 0;
+
+                }
+        
+                & .blog-item:nth-child(5){
+                    transform: translateX(120%);
+                    opacity: 0;
+
+                }
+                & .blog-item:nth-child(6){
+                    transform: translateX(180%);
+                    opacity: 0;
+                }
+                & .blog-item:nth-child(n+7){
+                    transform: translateX(240%);
+                    opacity: 0;
+                }
+            }
+        }
+    }
 }
