add Contact page footer reveal animation function active mobile-nav

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 .head-container{
     
@@ -331,6 +334,9 @@ header{
         flex-direction: row;
         align-items: center;
         gap: 3rem;
+        transform: translateY(15%);
+        opacity: 0;
+        transition: 1s ease-out;
         
 
         & .services-img{
@@ -344,7 +350,7 @@ header{
             }
         }
         & .services-content{
-            margin-top: 5rem;
+            margin-top: 3rem;
             width: 100%;
             padding: 3rem;
             align-self: start;
@@ -400,57 +406,14 @@ header{
             }
         }
     }
+    & .container-services.active{
+        transform: translateY(0);
+        opacity: 1;
+    }
     
 }
 
-#contact{
-    width: 100%;
-    height: 600px;
-    background-color: white;
 
-    & .logo-slider{
-        width: 100%;
-        height: 200px;
-        background-color: #1c1c1c;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        & .scroll-wrap{
-            
-            -webkit-mask-image: linear-gradient(90deg,transparent 10%,#fff 30%,#fff 70%,transparent 90%);
-            overflow: hidden;
-            display: flex;
-
-            & .scroll{
-                width: 80%;
-                display: flex;
-                align-items: center;
-                gap: 9rem;
-                opacity: .5;
-    
-                & img{
-                    width: 100px;
-                    object-fit: contain;
-                }
-            }
-            & .scroll:nth-child(1){
-                transform: translateX(115%);
-                animation: logoScroll-1 40s linear infinite;
-            }
-            
-        }
-    }
-}
-
-@keyframes logoScroll-1 {
-    0%{
-        transform: translateX(115%);
-    }
-    100%{
-        transform: translateX(-115%);
-    }
-}
 
 svg{
     width: 100%;
@@ -464,6 +427,9 @@ svg{
     & .container-package{
         margin-top: 3rem;
         width: 80%;
+        transform: translateY(15%);
+        opacity: 0;
+        transition: 1s ease-out;
 
         & .package-content{
             display: flex;
@@ -600,6 +566,10 @@ svg{
             }
         }
     }
+    & .container-package.active{
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 #blog{
@@ -608,173 +578,396 @@ svg{
     display: flex;
     justify-content: center;
 
-& .container-blog{
-    width: 80%;
-    height: 100%;
-    position: relative;
-
-    & h2{
-        font-size: 2rem;
-        color: #074173;
-        margin-bottom: 2rem;
-    }
-    & p{
-        color: #3597c8;
-        margin-bottom: 5rem;
-    }
-
-    & .blog-carousel{
-        width: 100%;
+    & .container-blog{
+        width: 80%;
         height: 100%;
         position: relative;
-        display: flex;
-        justify-content: center;
-        
+        overflow: hidden;
+        transform: translateY(15%);
+        opacity: 0;
+        transition: 1s ease-out;
 
-        & .blog-item{
-            width: 26%;
-            position: absolute;
-            transition: 0.5s ease-in-out;
+        & h2{
+            font-size: 2rem;
+            color: #074173;
+            margin-bottom: 2rem;
+        }
+        & p{
+            color: #3597c8;
+            margin-bottom: 5rem;
+        }
 
-            & img{
-                width: 100%;
-                height: 155px;
-                border-radius: 10px;
-                object-fit: cover;
+        & .blog-carousel{
+            width: 100%;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            
+
+            & .blog-item{
+                width: 26%;
+                position: absolute;
+                transition: 0.5s ease-in-out;
+
+                & img{
+                    width: 100%;
+                    height: 155px;
+                    border-radius: 10px;
+                    object-fit: cover;
+                }
+
+                & .blog-content{
+                    padding: 1.5rem;
+                    position: relative;
+                    
+
+                    & h3{
+                        color: #074173;
+                        font-size: 1.2rem;
+                        margin-bottom: 1rem;
+                    }
+                    & p{
+                        color: #3597c8;
+                        font-size: 0.9rem;
+                        font-weight: 300;
+                        margin-bottom: 1rem;
+
+                    }
+                    & a{
+                        border-bottom: 1.5px solid #074173;
+                        padding-bottom: 0.3rem;
+                        text-decoration: none;
+                        transition: 1s;
+                    }
+                    & a:hover{
+                        color: #3189d6;
+                        border-bottom: 1.5px solid #3189d6;
+                        letter-spacing: 2px;
+                    }
+                    & .blog-date{
+                        width: 50px;
+                        height: 50px;
+                        background-color: #F3CA52;
+                        position: absolute;
+                        top: -70px;
+                        left: -10px;
+                        text-align: center;
+                        font-size: 1rem;
+                        font-weight: 700;
+                        color: #ffffff;
+                        & div{
+                            margin-top: 0.2rem;
+                        }
+                        
+                        & p{
+                            color: #ffffff;
+                            font-size: 0.8rem;
+                            font-weight: 300; 
+                        }
+                    }
+                }
+                & .blog-content::after{
+                    content: "";
+                    width: 100%;
+                    height: 60%;
+                    position: absolute;
+                    bottom: 20%;
+                    left: 0;
+                    border-left: 2px solid #F3CA52;
+                }
+            }
+            & .blog-item:nth-child(1){
+                transform: translateX(calc(-300% - 108px));
+                opacity: 0;
+            }
+            & .blog-item:nth-child(2){
+                transform: translateX(calc(-200% - 72px));
+                opacity: 0;
+            }
+            & .blog-item:nth-child(3){
+                transform: translateX(calc(-100% - 36px));
+            }
+            & .blog-item:nth-child(4){
+                transform: translateX(0);
             }
 
-            & .blog-content{
-                padding: 1.5rem;
-                position: relative;
-                
+            & .blog-item:nth-child(5){
+                transform: translateX(calc(100% + 36px));
+            }
+            & .blog-item:nth-child(6){
+                transform: translateX(calc(200% + 72px));
+                opacity: 0;
+            }
+            & .blog-item:nth-child(n+7){
+                transform: translateX(calc(300% + 108px));
+                opacity: 0;
+            }
+        
+            
+        }
+        & .blog-btn{
+            width: 100%;
+            position: absolute;
+            top: 50%;
+            display: flex;
+            justify-content: space-between;
+            & button{
+                font-size: 2rem;
+                background-color: transparent;
+                border: none;
+                outline: none;
+                transition: 0.5s;
+                cursor: pointer;
+                color: #a4a4a4;
+            }
+            & button:hover{
+                color: #074173;
 
+            }
+            
+            
+        }
+    }
+    & .container-blog.active{
+        transform: translateY(0);
+        opacity: 1;
+    }
+    
+}
+
+#contact{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(28, 28, 28);
+
+    & .container-contact{
+        width: 80%;
+        margin-top: 3rem;
+        transform: translateY(15%);
+        opacity: 0;
+        transition: 1s ease-out;
+        
+        & h2{
+            font-size: 2rem;
+            color: rgb(209, 209, 209);
+
+        }
+        & .contact-content{
+            margin-top: 2rem;
+            display: flex;
+            gap: 1rem;
+            width: 100%;
+            & .contact-info{
+                width: 30%;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                & .contact-item{
+                    background-color: rgb(50, 50, 50);
+                    display: flex;
+                    align-items: center;
+                    gap: 2rem;
+                    padding: 1rem;
+                    border-radius: 10px;
+                    & .contact-icon{
+                        margin-left: 1rem;
+
+                        & i{
+                            background-color: rgb(78, 78, 78);
+                            font-size: 1.5rem;
+                            padding: 1rem;
+                            color: rgb(209, 209, 209);
+                            border-radius: 10px;
+                        }
+                    }
+                    & .contact-text{
+                        & h3{
+                            color: rgb(209, 209, 209);
+                        }
+                        & p{
+                            font-size: 0.9rem;
+                            font-weight: 300;
+                            color: rgb(151, 151, 151);
+
+                        }
+                    }
+
+
+                }
+            }
+            & #contact-form{
+                width: 70%;
+                background-color: rgb(50, 50, 50);
+                border-radius: 10px;
+                padding: 1rem 2rem;
                 & h3{
-                    color: #074173;
-                    font-size: 1.2rem;
-                    margin-bottom: 1rem;
+                    color: rgb(209, 209, 209);
+                    font-size: 1.3rem;
                 }
                 & p{
-                    color: #3597c8;
+                    margin-top: 1rem;
                     font-size: 0.9rem;
                     font-weight: 300;
-                    margin-bottom: 1rem;
-
+                    color: rgb(151, 151, 151);
                 }
-                & a{
-                    border-bottom: 1.5px solid #074173;
-                    padding-bottom: 0.3rem;
-                    text-decoration: none;
-                    transition: 1s;
-                }
-                & a:hover{
-                    color: #3189d6;
-                    border-bottom: 1.5px solid #3189d6;
-                    letter-spacing: 2px;
-                }
-                & .blog-date{
-                    width: 50px;
-                    height: 50px;
-                    background-color: #F3CA52;
-                    position: absolute;
-                    top: -70px;
-                    left: -10px;
-                    text-align: center;
-                    font-size: 1rem;
-                    font-weight: 700;
+                & .input{
+                    padding: 1rem;
+                    width: 100%;
+                    border: 1px solid rgb(151, 151, 151);
+                    outline: none;
+                    background-color: rgb(78, 78, 78);
+                    border-radius: 10px;
                     color: #ffffff;
-                    & div{
-                        margin-top: 0.2rem;
-                    }
-                    
-                    & p{
-                        color: #ffffff;
-                        font-size: 0.8rem;
-                        font-weight: 300; 
-                    }
+                }
+                & .fullname{
+                    margin-top: 2rem;
+                }
+                & .form-info{
+                    display: flex;
+                    gap: 1rem;
+                    margin-top: 1rem;
+                }
+                & ::placeholder{
+                    color: rgb(151, 151, 151);
+                }
+                & textarea{
+                    margin-top: 1rem;
                 }
             }
-            & .blog-content::after{
-                content: "";
-                width: 100%;
-                height: 60%;
-                position: absolute;
-                bottom: 20%;
-                left: 0;
-                border-left: 2px solid #F3CA52;
-            }
         }
-        & .blog-item:nth-child(1){
-            transform: translateX(calc(-300% - 108px));
-            opacity: 0;
-        }
-        & .blog-item:nth-child(2){
-            transform: translateX(calc(-200% - 72px));
-            opacity: 0;
-        }
-        & .blog-item:nth-child(3){
-            transform: translateX(calc(-100% - 36px));
-        }
-        & .blog-item:nth-child(4){
-            transform: translateX(0);
-        }
-
-        & .blog-item:nth-child(5){
-            transform: translateX(calc(100% + 36px));
-        }
-        & .blog-item:nth-child(6){
-            transform: translateX(calc(200% + 72px));
-            opacity: 0;
-        }
-        & .blog-item:nth-child(n+7){
-            transform: translateX(calc(300% + 108px));
-            opacity: 0;
-        }
-    
-        
     }
-    & .blog-btn{
+    & .container-contact.active{
+        transform: translateY(0);
+        opacity: 1;
+    }
+    & .partner{
+        width: 80%;
+        text-align: left;
+        font-size: 2rem;
+        margin-top: 3rem;
+        color: rgb(209, 209, 209);
+    }
+
+    & .logo-slider{
+        margin-top: 2rem;
         width: 100%;
-        position: absolute;
-        top: 50%;
-        display: flex;
-        justify-content: space-between;
-        & button{
-            font-size: 2rem;
-            background-color: transparent;
-            border: none;
-            outline: none;
-            transition: 0.5s;
-            cursor: pointer;
-            color: #a4a4a4;
-        }
-        & button:hover{
-            color: #074173;
-
-        }
-        
-        
-    }
-    & .bullet{
+        height: 200px;
+        background-color: rgb(28, 28, 28);
         display: flex;
         justify-content: center;
-        width: 100%;
+        align-items: center;
         
-        & ul{
+        & .scroll-wrap{
+            
+            -webkit-mask-image: linear-gradient(90deg,transparent 10%,#fff 30%,#fff 70%,transparent 90%);
+            overflow: hidden;
             display: flex;
-            justify-content: space-around;
-            width: 30%;
-            & .bullet-item{
-                list-style: none;
-                width: 10px;
-                height: 10px;
-                border-radius: 100%;
-                background-color: #074173;
 
+            & .scroll{
+                width: 80%;
+                display: flex;
+                align-items: center;
+                gap: 9rem;
+                opacity: .5;
+                transform: translateX(1200px);
+                animation: logoScroll-1 20s linear infinite;
+    
+                & img{
+                    width: 100px;
+                    object-fit: contain;
+                }
             }
+            
         }
     }
 }
-    
+
+@keyframes logoScroll-1 {
+    0%{
+        transform: translateX(1200px);
+    }
+    100%{
+        transform: translateX(-1200px);
+    }
+}
+
+footer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(28, 28, 28);
+    & .container-footer{
+        margin-top: 5rem;
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        transform: translateY(15%);
+        opacity: 0;
+        transition: 1s ease-out;
+        
+        & .footer-company{
+            width: 25%;
+            margin-top: -0.4rem;
+            & .logo a{
+                text-decoration: none;
+                color: rgb(209, 209, 209);
+                font-size: 2rem;
+                font-weight: bold;
+            }
+            & p{
+                margin-top: 1rem;
+                font-size: 0.8rem;
+                font-weight: 300;
+                color: rgb(151, 151, 151);
+            }
+
+        }
+        & .footer-nav{
+
+            & h2{
+                color: rgb(209, 209, 209);
+                font-size: 1rem;
+                font-weight: 500;
+            }
+            & ul{
+                margin-top: 1rem;
+                & li{
+                    list-style: none;
+                    & a{
+                        font-size: 0.8rem;
+                        text-decoration: none;
+                        color: rgb(110, 110, 110);
+                        letter-spacing: 2px;
+
+                    }
+                    & a:hover{
+                        color: rgb(209, 209, 209);
+
+                    }
+                }
+            }
+
+        }
+    }
+    & .container-footer.active{
+        transform: translateY(0);
+        opacity: 1;
+    }
+    & hr{
+        opacity: 0.1;
+        width: 80%;
+        margin: 2rem 0;
+        color: rgb(151, 151, 151);
+    }
+    & .copyright{
+        font-size: 0.9rem;
+        margin-bottom: 2rem;
+        color: rgb(151, 151, 151);
+    }
 }
 
 
@@ -891,6 +1084,34 @@ svg{
             }
         }
     }
+    #contact{
+        & .container-contact{
+            & .contact-content{
+                flex-direction: column;
+
+                & .contact-info{
+                    width: 100%;
+                }
+                & #contact-form{
+                    width: 100%;
+                }
+            }
+        }
+    }
+    footer{
+        
+        & .container-footer{
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            gap: 1rem;
+            & .footer-company{
+                width: calc(50% - 16px);
+            }
+            & .footer-nav{
+                width: calc(50% - 16px);
+            }
+        }
+    }
 }
 
 
@@ -974,6 +1195,18 @@ svg{
                 & .blog-item:nth-child(n+7){
                     transform: translateX(240%);
                     opacity: 0;
+                }
+            }
+        }
+    }
+    #contact{
+        & .container-contact{
+            & .contact-content{
+                & #contact-form{
+                    width: 100%;
+                    & .form-info{
+                        flex-direction: column;
+                    }
                 }
             }
         }
