--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html{
 .head-container{
     
     margin: 0 auto;
+    max-width: 1152px;
     width: 80%;
     display: flex;
     align-items: center;
@@ -122,7 +123,7 @@ header{
 }
 
 #home{
-    height: 100vh;
+    height: 760px;
     position: relative;
 
     & .list{
@@ -312,7 +313,7 @@ header{
 #services{
     background-color: #ffffff;
     width: 100%;
-    min-height: 100vh;
+    min-height: 760px;
     position: relative;
     display: flex;
     justify-content: center;
@@ -327,8 +328,9 @@ header{
 
     & .container-services{
         
-        margin-top: 200px;
+        margin-top: 15%;
         height: 100%;
+        max-width: 1152px;
         width: 80%;
         display: flex;
         flex-direction: row;
@@ -417,6 +419,8 @@ header{
 
 svg{
     width: 100%;
+    max-height: 500px;
+    object-fit: cover;
 }
 
 #package{
@@ -426,6 +430,7 @@ svg{
 
     & .container-package{
         margin-top: 3rem;
+        max-width: 1152px;
         width: 80%;
         transform: translateY(15%);
         opacity: 0;
@@ -518,6 +523,7 @@ svg{
                 position: relative;
                 & img{
                     width: 100%;
+                    height: 100%;
                     object-fit: cover;
                 }
 
@@ -574,11 +580,13 @@ svg{
 
 #blog{
     width: 100%;
-    height: 100vh;
+    margin-top: 5rem;
+    height: 760px;
     display: flex;
     justify-content: center;
 
     & .container-blog{
+        max-width: 1152px;
         width: 80%;
         height: 100%;
         position: relative;
@@ -744,6 +752,7 @@ svg{
 
     & .container-contact{
         width: 80%;
+        max-width: 1152px;
         margin-top: 3rem;
         transform: translateY(15%);
         opacity: 0;
@@ -902,6 +911,7 @@ footer{
     background-color: rgb(28, 28, 28);
     & .container-footer{
         margin-top: 5rem;
+        max-width: 1152px;
         width: 80%;
         display: flex;
         justify-content: space-between;
@@ -1014,14 +1024,12 @@ footer{
 
             & .services-content{
                 margin-top: 0;
-                min-height: 100vh;
             }
         }
     }
 
     #package{
         & .container-package{
-            margin-top: 0;
             & .package-content{
                 flex-direction: column;
                 & .package-title{
@@ -1039,6 +1047,9 @@ footer{
 
                 & .package-box-1{
                     width: 100%;
+                    & .package-img{
+                        grid-template-columns: 1fr;
+                    }
                 }
                 & .package-box-2{
                     width: 100%;
